# raytracer

./: .gitmodules  CMakeLists.txt  readme.md
pt_app_minimal_ppm/: CMakeLists.txt  main.cpp
resources/scenes/: readme.txt  test.blend
rt_app_minimal_sfml/: .raytracer.cpp.swp  CMakeLists.txt  raytracer.cpp  sfmlbuffer.hpp
rt_lib/: CMakeLists.txt
rt_lib/rt/buffer/: buffer.cpp  buffer.hpp
rt_lib/rt/buffer/sdl/: sdlbuffer.cpp  sdlbuffer.hpp
rt_lib/rt/math/: float4.hpp  mat4x4f.hpp  quaternion.hpp  uchar4.hpp  utils.hpp
rt_lib/rt/scene/: aabb.hpp  camera.hpp  ray.hpp  rayhit.hpp  scene.cpp  scene.hpp  tri.hpp
rt_lib/rt/scene/bvh/: bvh.cpp  bvh.hpp  bvhnode.hpp
rt_lib/rt/scene/lights/: arealight.hpp  light.hpp  pointlight.hpp
rt_lib/rt/scene/mesh/: mesh.hpp  tri.hpp
rt_lib/rt/tracers/: bvhtracer.cpp  bvhtracer.hpp  simpletracer.cpp  simpletracer.hpp  tracer.hpp
rt_lib/rt/utils/: export.hpp  formatters.hpp  timer.hpp
rt_lib_test/: CMakeLists.txt
rt_lib_test/buffer/: buffer.cpp
rt_lib_test/math/: float4.cpp  mat4x4f.cpp  quaternion.cpp
rt_lib_test/scene/: aabb.cpp  camera.cpp  ray.cpp  tri.cpp
scenes/: test.blend  test.blend1  test_pointlights.blend  test_pointlights.blend1
src/: CMakeLists.txt  raytracer.cpp
src/rt_app_minimal_sdl/: CMakeLists.txt
src/rt_lib/: CMakeLists.txt
